fix bug 206376 accesskey doesn't work when field type is "file" r=aaronleventhal sr=jst patched by neo.liu@sun.com